SQOOP-2244: Sqoop2: Generic JDBC: Automatically escape table and column names from configuration objects
(Jarek Jarcec Cecho via Abraham Elmahrek)

--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-config.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-config.properties
@@ -122,3 +122,10 @@ incrementalRead.checkColumn.help = Column that is checked during incremental rea
 incrementalRead.lastValue.label = Last value
 incrementalRead.lastValue.help = Last read value, fetch will resume with higher values
 
+
+# Dialect
+dialect.label = SQL Dialect
+dialect.help = Dialect that should be used for generated queries
+
+dialect.identifierEnclose.label = Identifier enclose
+dialect.identifierEnclose.help = Character(s) that should be used to enclose table name, schema, column names, ...
