SQOOP-2476: Sqoop2: Fix failing precommit hook
(Jarek Jarcec Cecho via Abraham Elmahrek)

--- a/pom.xml
+++ b/pom.xml
@@ -727,7 +727,11 @@ limitations under the License.
             </properties>
           </configuration>
         </plugin>
-
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>2.6</version>
+        </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
