SQOOP-2461: Sqoop2: Add MySQL support for the metadata repository
(Colin Ma via Abraham Elmahrek)

--- a/repository/pom.xml
+++ b/repository/pom.xml
@@ -36,6 +36,7 @@ limitations under the License.
     <module>repository-common</module>
     <module>repository-derby</module>
     <module>repository-postgresql</module>
+    <module>repository-mysql</module>
   </modules>
 
 </project>
