--- a/pom.xml
+++ b/pom.xml
@@ -304,6 +304,11 @@ limitations under the License.
         <version>${project.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.sqoop.repository</groupId>
+        <artifactId>sqoop-repository-mysql</artifactId>
+        <version>${project.version}</version>
+      </dependency>
+      <dependency>
         <groupId>org.apache.sqoop</groupId>
         <artifactId>connector-sdk</artifactId>
         <version>${project.version}</version>
