SQOOP-2505: Sqoop2: Add ability to specify custom configuration properties for HDFS connector
(Jarek Jarcec Cecho via Abraham Elmahrek)

--- a/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
+++ b/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
@@ -27,6 +27,9 @@ linkConfig.uri.help = HDFS URI used to connect to HDFS
 linkConfig.confDir.label = Hadoop conf directory
 linkConfig.confDir.help = Directory with Hadoop configuration files. The connector will load all -site.xml files.
 
+linkConfig.configOverrides.label = Override configuration
+linkConfig.configOverrides.help = Map of properties that that should be set for the Hadoop's configuration object on top of the files loaded from configuration directory.
+
 # To Job Config
 #
 toJobConfig.label = To HDFS configuration
