SQOOP-2550: Sqoop2: Findbugs: Add filter for the warning SQL_NONCONSTANT_STRING_PASSED_TO_EXECUTE and SQL_PREPARED_STATEMENT_GENERATED_FROM_NONCONSTANT_STRING
(Colin Ma via Jarek Jarcec Cecho)

--- a/common-test/pom.xml
+++ b/common-test/pom.xml
@@ -74,6 +74,11 @@ limitations under the License.
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
     </dependency>
+
+    <dependency>
+      <groupId>net.sourceforge.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+    </dependency>
   </dependencies>
 
   <profiles>
