--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,7 @@ limitations under the License.
     <kafka.version>0.8.1.1</kafka.version>
     <avro.version>1.7.7</avro.version>
     <jcommander.version>1.27</jcommander.version>
+    <findbugs.version>1.3.2</findbugs.version>
   </properties>
 
   <dependencies>
@@ -639,7 +640,13 @@ limitations under the License.
        <groupId>org.apache.avro</groupId>
        <artifactId>avro</artifactId>
        <version>${avro.version}</version>
-     </dependency>
+      </dependency>
+      <dependency>
+        <groupId>net.sourceforge.findbugs</groupId>
+        <artifactId>annotations</artifactId>
+        <version>${findbugs.version}</version>
+        <scope>provided</scope>
+      </dependency>
    </dependencies>
   </dependencyManagement>
 
