--- a/repository/repository-common/pom.xml
+++ b/repository/repository-common/pom.xml
@@ -43,6 +43,11 @@ limitations under the License.
     </dependency>
 
     <dependency>
+      <groupId>net.sourceforge.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <scope>test</scope>
