--- a/repository/repository-mysql/pom.xml
+++ b/repository/repository-mysql/pom.xml
@@ -46,6 +46,10 @@ limitations under the License.
       <artifactId>sqoop-repository-common</artifactId>
     </dependency>
     <dependency>
+      <groupId>net.sourceforge.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.testng</groupId>
       <artifactId>testng</artifactId>
       <scope>test</scope>
