SQOOP-2555: Sqoop2: Findbugs: Add filter for the unnecessary warning
(Colin Ma via Jarek Jarcec Cecho)

--- a/connector/connector-kite/pom.xml
+++ b/connector/connector-kite/pom.xml
@@ -71,6 +71,10 @@ limitations under the License.
       <artifactId>powermock-api-mockito</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>net.sourceforge.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+    </dependency>
 
     <!-- Kite required modules -->
     <dependency>
