SQOOP-2557: Sqoop2: Findbugs: move findbug dependency to the root pom.xml
(Colin Ma via Jarek Jarcec Cecho)

--- a/pom.xml
+++ b/pom.xml
@@ -136,7 +136,10 @@ limitations under the License.
       <artifactId>testng</artifactId>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>net.sourceforge.findbugs</groupId>
+      <artifactId>annotations</artifactId>
+    </dependency>
   </dependencies>
 
   <profiles>
