SQOOP-2525. Sqoop2: Add support for incremental From in HDFS Connector
(Jarcec via Hari)

--- a/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
+++ b/connector/connector-hdfs/src/main/resources/hdfs-connector-config.properties
@@ -63,6 +63,15 @@ toJobConfig.nullValue.label = Null value
 toJobConfig.nullValue.help = Use this particular character or sequence of characters \
                              as a value representing null when outputting to a file.
 
+incremental.label = Incremental import
+incremental.help = Information relevant for incremental import from HDFS
+
+incremental.incrementalType.label = Incremental type
+incremental.incrementalType.help = Type of incremental import
+
+incremental.lastImportedDate.label = Last imported date
+incremental.lastImportedDate.help = Date when last import happened
+
 # From Job Config
 #
 fromJobConfig.label = From HDFS configuration
