SQOOP-2524. Sqoop2: Add S3 support to HDFS Connector
(Jarcec via Hari)

--- a/pom.xml
+++ b/pom.xml
@@ -426,6 +426,12 @@ limitations under the License.
         <version>${hadoop.2.version}</version>
       </dependency>
       <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-aws</artifactId>
+        <version>${hadoop.2.version}</version>
+        <scope>provided</scope>
+      </dependency>
+      <dependency>
         <groupId>org.apache.hive</groupId>
         <artifactId>hive-jdbc</artifactId>
         <version>${hive.version}</version>
