--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@ limitations under the License.
     <avro.version>1.7.7</avro.version>
     <jcommander.version>1.27</jcommander.version>
     <findbugs.version>1.3.2</findbugs.version>
+    <jetty.version>9.2.13.v20150730</jetty.version>
   </properties>
 
   <dependencies>
@@ -289,7 +290,6 @@ limitations under the License.
       <dependency>
         <groupId>org.apache.sqoop</groupId>
         <artifactId>sqoop-server</artifactId>
-        <type>war</type>
         <version>${project.version}</version>
       </dependency>
       <dependency>
@@ -655,6 +655,16 @@ limitations under the License.
         <artifactId>annotations</artifactId>
         <version>${findbugs.version}</version>
         <scope>provided</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-server</artifactId>
+        <version>${jetty.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.eclipse.jetty</groupId>
+        <artifactId>jetty-servlet</artifactId>
+        <version>${jetty.version}</version>
       </dependency>
    </dependencies>
   </dependencyManagement>
