--- a/test/pom.xml
+++ b/test/pom.xml
@@ -86,6 +86,11 @@ limitations under the License.
     </dependency>
 
     <dependency>
+      <groupId>org.apache.sqoop</groupId>
+      <artifactId>sqoop-server</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>org.apache.sqoop.connector</groupId>
       <artifactId>sqoop-connector-kafka</artifactId>
     </dependency>
@@ -239,7 +244,6 @@ limitations under the License.
           </execution>
         </executions>
       </plugin>
-
     </plugins>
   </build>
 
