SQOOP-2490: Sqoop2: Add extra jars to job
(Abraham Fine via Jarek Jarcec Cecho)

--- a/test/src/test/resources/TestConnector/sqoopconnector.properties
+++ b/test/src/test/resources/TestConnector/sqoopconnector.properties
@@ -13,25 +13,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-# Driver Configs
-
-############################
-
-# Throttling From
-#
-throttlingConfig.label = Throttling resources
-throttlingConfig.help = Set throttling boundaries to not overload your systems
-
-throttlingConfig.numExtractors.label = Extractors
-throttlingConfig.numExtractors.help = Number of extractors that Sqoop will use
-
-throttlingConfig.numLoaders.label = Loaders
-throttlingConfig.numLoaders.help = Number of loaders that Sqoop will use
-
-# Jar Configuration
-#
-jarConfig.label = Classpath configuration
-jarConfig.help = Classpath configuration specific to the driver
-
-jarConfig.extraJars.label = Extra mapper jars
-jarConfig.extraJars.help = A list of the FQDNs of additional jars that are needed to execute the job
+# Test Connector Properties
+org.apache.sqoop.connector.class = TestConnector
+org.apache.sqoop.connector.name = test-connector
