SQOOP-2352: Sqoop2: Generic JDBC Connector support for fetch size
(Abraham Fine via Jarek Jarcec Cecho)

--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-config.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-config.properties
@@ -43,6 +43,11 @@ linkConfig.password.label = Password
 linkConfig.password.help = Enter the password to be used for connecting to the \
                    database.
 
+# fetch size int
+linkConfig.fetchSize.label = Fetch Size
+linkConfig.fetchSize.help = Optional hint for JDBC fetch size. See  \
+                   http://docs.oracle.com/javase/7/docs/api/java/sql/Statement.html#setFetchSize(int)
+
 # jdbc properties
 linkConfig.jdbcProperties.label = JDBC Connection Properties
 linkConfig.jdbcProperties.help = Enter any JDBC properties that should be \
