scoop phoenix first code drop

--- a/build.xml
+++ b/build.xml
@@ -191,7 +191,7 @@
   </if>
 
   <!-- Set dependency versions that are working with all Hadoop versions-->
-  <property name="hbase95.version" value="0.95.2-hadoop${hbasecompatprofile}-SNAPSHOT" />
+  <property name="hbase95.version" value="0.95.2-hadoop${hbasecompatprofile}" />
 
   <!-- Load system-wide and project-wide default properties set by
        the user, to avoid needing to override with -D. -->
