--- a/test/pom.xml
+++ b/test/pom.xml
@@ -237,6 +237,21 @@ limitations under the License.
               </properties>
             </configuration>
           </execution>
+          <execution>
+            <id>connector-loading-test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <phase>integration-test</phase>
+            <configuration>
+              <suiteXmlFiles>
+                <suiteXmlFile>src/test/resources/connector-loading-tests-suite.xml</suiteXmlFile>
+              </suiteXmlFiles>
+              <properties>
+                <suitename>connector-loading-tests</suitename>
+              </properties>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
     </plugins>
