--- a/build.xml
+++ b/build.xml
@@ -192,6 +192,9 @@
 
   <!-- Set dependency versions that are working with all Hadoop versions-->
   <property name="hbase95.version" value="0.95.2-hadoop${hbasecompatprofile}" />
+	
+  <!-- Set phoenix version-->
+  <property name="phoenix.version" value="4.3.1" />
 
   <!-- Load system-wide and project-wide default properties set by
        the user, to avoid needing to override with -D. -->
