SQOOP-2660. Sqoop2: Generic JDBC: Convert input Columns from String to List
(Jarcec via Hari)

--- a/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-config.properties
+++ b/connector/connector-generic-jdbc/src/main/resources/generic-jdbc-connector-config.properties
@@ -71,9 +71,9 @@ fromJobConfig.tableName.help = Table name to read data from
 fromJobConfig.sql.label = Table SQL statement
 fromJobConfig.sql.help = SQL statement to read data from (Optional if table name is already given)
 
-# From table columns
-fromJobConfig.columns.label = Table column names
-fromJobConfig.columns.help = Specific columns in the given table name or the SQL query (Optional)
+# From table columnList
+fromJobConfig.columnList.label = Table column names
+fromJobConfig.columnList.help = Specific columns in the given table name or the SQL query (Optional)
 
 # From table partition column
 fromJobConfig.partitionColumn.label = Partition column name
@@ -105,9 +105,9 @@ toJobConfig.tableName.help = Table name to write data into
 toJobConfig.sql.label = Table SQL statement
 toJobConfig.sql.help = SQL statement to use to write data into (Optional if table name is already given)
 
-# To table columns
-toJobConfig.columns.label = Table column names
-toJobConfig.columns.help = Specific columns to use in the given table name or the table SQL  (Optional)
+# To table columnList
+toJobConfig.columnList.label = Table column names
+toJobConfig.columnList.help = Specific columns to use in the given table name or the table SQL  (Optional)
 
 # To stage table name
 toJobConfig.stageTableName.label = Stage table name
