--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,9 @@ limitations under the License.
     <jcommander.version>1.27</jcommander.version>
     <findbugs.version>1.3.2</findbugs.version>
     <jetty.version>9.2.13.v20150730</jetty.version>
+    <jline.version>2.13</jline.version>
+    <groovy.version>2.4.0</groovy.version>
+    <jansi.version>1.7</jansi.version>
   </properties>
 
   <dependencies>
