SQOOP-2717: Sqoop2: Use connector name in shell
(Colin Ma via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -42,7 +42,7 @@ args.value_missing = Required argument --value is missing.
 
 ## Generic description of various ids, types etc
 prompt.link_id = Link Id
-prompt.connector_id = Connector Id
+prompt.connector_name = Connector Name
 prompt.job_id = Job Id
 prompt.job_type = Job type
 
@@ -78,7 +78,7 @@ create.link_successful = New link was successfully created with \
 create.job_successful = New job was successfully created with validation \
   status {0}  and persistent id {1}
 create.role_successful = New role was successfully created with name {0}
-create.creating_link = Creating link for connector with id {0}
+create.creating_link = Creating link for connector with name {0}
 create.creating_job = Creating job for links with from id {0} and to id {1}
 
 # Delete command
@@ -133,13 +133,13 @@ show.prompt_display_link_lid = Display the link with lid
 show.link_usage = Usage: show link
 show.prompt_links_to_show = @|bold {0} link(s) to show: |@
 show.prompt_link_info = link with id {0} and name {1} (Enabled: {2}, Created by {3} at {4}, Updated by {5} at {6})
-show.prompt_link_cid_info = Using Connector @|bold {0}|@ with id @|bold {1}|@
+show.prompt_link_cn_info = Using Connector @|bold {0}|@ with name @|bold {1}|@
 
 show.prompt_display_all_connectors = Display all connectors
-show.prompt_display_connector_cid = Display the connector with cid
+show.prompt_display_connector_name = Display the connector with name
 show.connector_usage = Usage: show connector
 show.prompt_connectors_to_show = @|bold {0} connector(s) to show: |@
-show.prompt_connector_info = Connector with id {0}:\n  Name: {1} \n  \
+show.prompt_connector_info = Connector with Name: {0} \n  \
 Class: {2}\n  Version: {3}\n  Supported Directions {4}
 show.role.bad_arguments_principal_type = @|bold principal |@ and @|bold principal-type |@ must be used together.
 show.privilege.bad_arguments_resource_type = @|bold resource |@ and @|bold resource-type |@ must be used together.
@@ -148,7 +148,7 @@ show.driver_usage = Usage: show driver
 show.prompt_driver_opts = @|bold Driver specific options: |@\nPersistent id: {0}
 
 show.prompt_display_all_jobs = Display all jobs
-show.prompt_display_all_jobs_cid = Display all jobs with given cid
+show.prompt_display_all_jobs_cn = Display all jobs with given connector name
 show.prompt_display_job_jid = Display job with given jid
 show.job_usage = Usage: show job
 show.prompt_jobs_to_show = @|bold {0} job(s) to show: |@
@@ -213,7 +213,6 @@ table.header.name = Name
 table.header.version = Version
 table.header.class = Class
 table.header.supported_directions = Supported Directions
-table.header.connector.id = Connector Id
 table.header.connector.name = Connector Name
 table.header.connector.from = From Connector
 table.header.connector.to = To Connector
