SQOOP-2734: Sqoop2: Use job name in shell
(Colin Ma via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -43,7 +43,7 @@ args.value_missing = Required argument --value is missing.
 ## Generic description of various ids, types etc
 prompt.link_id = Link Id
 prompt.connector_name = Connector Name
-prompt.job_id = Job Id
+prompt.job_name = Job Name
 prompt.job_type = Job type
 
 ## Prompt messages for updating, filling entity info
@@ -58,7 +58,7 @@ job object
 # Update command
 update.description = Update objects in Sqoop repository
 update.link = Updating link with id {0}
-update.job = Updating job with id {0}
+update.job = Updating job with name {0}
 update.link_successful = link was successfully updated with status {0}
 update.job_successful = Job was successfully updated with status {0}
 
@@ -69,14 +69,14 @@ clone.link.successful = link was successfully created with validation \
 clone.job.successful = Job was successfully created with validation \
   status {0} and persistent id {1}
 clone.cloning_link = Cloning link with id {0}
-clone.cloning_job = Cloning job with id {0}
+clone.cloning_job = Cloning job with name {0}
 
 # Create command
 create.description = Create new object in Sqoop repository
 create.link_successful = New link was successfully created with \
   validation status {0} and persistent id {1}
 create.job_successful = New job was successfully created with validation \
-  status {0}  and persistent id {1}
+  status {0}  and name {1}
 create.role_successful = New role was successfully created with name {0}
 create.creating_link = Creating link for connector with name {0}
 create.creating_job = Creating job for links with from id {0} and to id {1}
@@ -149,15 +149,15 @@ show.prompt_driver_opts = @|bold Driver specific options: |@\nPersistent id: {0}
 
 show.prompt_display_all_jobs = Display all jobs
 show.prompt_display_all_jobs_cn = Display all jobs with given connector name
-show.prompt_display_job_jid = Display job with given jid
+show.prompt_display_job_name = Display job with given name
 show.job_usage = Usage: show job
 show.prompt_jobs_to_show = @|bold {0} job(s) to show: |@
-show.prompt_job_info = Job with id {0} and name {1} (Enabled: {2}, Created by {3} at {4}, Updated by {5} at {6})
+show.prompt_job_info = Job with name {0} (Enabled: {1}, Created by {2} at {3}, Updated by {4} at {5})
 show.prompt_job_from_lid_info = From link: {0}
 show.prompt_job_to_lid_info = To link: {0}
 
 show.prompt_display_all_submissions = Display all submissions
-show.prompt_display_all_submissions_jid = Display all submissions given jid
+show.prompt_display_all_submissions_jn = Display all submissions given job name
 
 show.prompt_display_all_servers = Display all server information
 show.prompt_display_server_host = Display server host name
