SQOOP-2735: Sqoop2: Use job name in MSubmission
(Colin Ma via Jarek Jarcec Cecho)

--- a/shell/src/main/resources/shell-resource.properties
+++ b/shell/src/main/resources/shell-resource.properties
@@ -216,7 +216,7 @@ table.header.supported_directions = Supported Directions
 table.header.connector.name = Connector Name
 table.header.connector.from = From Connector
 table.header.connector.to = To Connector
-table.header.jid = Job Id
+table.header.job.name = Job Name
 table.header.eid = External Id
 table.header.status = Status
 table.header.date = Last Update Date
@@ -249,7 +249,7 @@ config.displayer.input_sensitive = This input is sensitive
 config.displayer.warning_message = There were warnings while create or update, but saved successfully.
 
 submission.submission_detail = Submission details
-submission.job_id = Job ID
+submission.job_name = Job Name
 submission.creation_user = Created by
 submission.creation_date = Creation date
 submission.update_user = Lastly updated by
