--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,7 @@ limitations under the License.
     <jline.version>2.13</jline.version>
     <groovy.version>2.4.0</groovy.version>
     <jansi.version>1.7</jansi.version>
+    <felix.version>2.4.0</felix.version>
   </properties>
 
   <dependencies>
@@ -450,6 +451,11 @@ limitations under the License.
       <dependency>
         <groupId>org.apache.hadoop</groupId>
         <artifactId>hadoop-minicluster</artifactId>
+        <version>${hadoop.2.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.apache.hadoop</groupId>
+        <artifactId>hadoop-minikdc</artifactId>
         <version>${hadoop.2.version}</version>
       </dependency>
       <dependency>
@@ -791,6 +797,11 @@ limitations under the License.
             <!-- See SQOOP-2120 for details about use of -XX:-UseSplitVerifier -->
             <argLine>-Xms512m -Xmx2g -XX:MaxPermSize=1024m -XX:-UseSplitVerifier</argLine>
           </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.felix</groupId>
+          <artifactId>maven-bundle-plugin</artifactId>
+          <version>${felix.version}</version>
         </plugin>
       </plugins>
     </pluginManagement>
