--- a/common/src/main/resources/org.apache.sqoop.connector-classloader.properties
+++ b/common/src/main/resources/org.apache.sqoop.connector-classloader.properties
@@ -51,5 +51,7 @@ system.classes.default=java.,\
   org.apache.commons.logging.,\
   org.apache.log4j.,\
   org.apache.sqoop.,\
+  -org.apache.sqoop.connector.,\
+  org.xerial.snappy.,\
   sqoop.properties,\
   sqoop_bootstrap.properties
