--- a/assemblies/pom.xml
+++ b/assemblies/pom.xml
@@ -22,51 +22,13 @@ limitations under the License.
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.apache.sqoop</groupId>
-    <artifactId>connector</artifactId>
+    <groupId>org.apache</groupId>
+    <artifactId>sqoop</artifactId>
     <version>2.0.0-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.apache.sqoop.connector</groupId>
-  <artifactId>sqoop-connector-generic-jdbc</artifactId>
-  <name>Sqoop Generic JDBC Connector</name>
+  <groupId>org.apache.sqoop</groupId>
+  <artifactId>sqoop-assemblies</artifactId>
+  <name>Sqoop Assemblies</name>
 
-  <dependencies>
-
-    <dependency>
-      <groupId>org.apache.sqoop</groupId>
-      <artifactId>connector-sdk</artifactId>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>commons-lang</groupId>
-      <artifactId>commons-lang</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.apache.derby</groupId>
-      <artifactId>derby</artifactId>
-    </dependency>
-
-    <dependency>
-      <groupId>org.testng</groupId>
-      <artifactId>testng</artifactId>
-      <scope>test</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
-    </dependency>
-  </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-assembly-plugin</artifactId>
-      </plugin>
-    </plugins>
-  </build>
 </project>
