--- a/test/pom.xml
+++ b/test/pom.xml
@@ -257,6 +257,21 @@ limitations under the License.
               </properties>
             </configuration>
           </execution>
+          <execution>
+            <id>tools-test</id>
+            <goals>
+              <goal>test</goal>
+            </goals>
+            <phase>integration-test</phase>
+            <configuration>
+              <suiteXmlFiles>
+                <suiteXmlFile>src/test/resources/tools-tests-suite.xml</suiteXmlFile>
+              </suiteXmlFiles>
+              <properties>
+                <suitename>tools-tests</suitename>
+              </properties>
+            </configuration>
+          </execution>
         </executions>
       </plugin>
       <plugin>
