SQOOP-2752: Sqoop2: Add impersonation support for kite hdfs
(Dian Fu via Jarek Jarcec Cecho)

--- a/connector/connector-kite/pom.xml
+++ b/connector/connector-kite/pom.xml
@@ -39,6 +39,11 @@ limitations under the License.
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.apache.sqoop</groupId>
+      <artifactId>connector-sdk-hadoop</artifactId>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
       <groupId>org.apache.hadoop</groupId>
       <artifactId>hadoop-common</artifactId>
       <scope>provided</scope>
