--- a/common/pom.xml
+++ b/common/pom.xml
@@ -55,6 +55,11 @@ limitations under the License.
     </dependency>
 
     <dependency>
+      <groupId>commons-cli</groupId>
+      <artifactId>commons-cli</artifactId>
+    </dependency>
+
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
     </dependency>
